[FIX] z-index header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,6 +309,7 @@ header{
   width: calc(100% - var(--aside-width));
   height: var(--top-bottom-height);
   background-color: rgba(0, 0, 4, 0.4);
+  z-index: 999;
 }
 
 header .button{
